@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         ANSIColor
-version:      1.08
+version:      1.09
 version_from: ANSIColor.pm
 installdirs:  perl
 requires:
